--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -6,7 +6,7 @@ body{
 
 .container{
     display: flexbox;
-    background-color: white;
+    background-color: rgb(248, 248, 248);
     width: max-content;
     margin: 1rem auto;
     padding: 2rem;
@@ -14,16 +14,95 @@ body{
     border-radius: .5rem;
 }
 
-img{
-    align-self: center;
+header{
+    display: grid;
+    grid-template-columns: auto min-content;
 }
 
-table, th, td{
-    border: black 2px solid;
+img{
+    grid-column-start: 2;
+    width: 10rem;
+}
+
+.address{
+    grid-column-start: 1;
+    grid-row-start: 1;
+}
+
+table, th, tr, td{
+    text-align: center;
+    display: grid;
+    /* border: black 2px solid; */
+    /* border-collapse: collapse; */
+    /* grid-column-start: auto; */
+}
+
+th{
+    background-color: rgb(188, 253, 255);
+}
+
+tr{
+    margin: .2rem;
+    /* border: solid black .2rem;
+    border-collapse: collapse; */
+    display: grid;
+    background-color: rgb(250, 249, 232);
+    grid-template-columns: 8rem 5rem 5rem 5rem auto 6rem 6rem;
+}
+
+.name{
+    border-top-left-radius: .6rem;
+    border-bottom-left-radius: .6rem;
+
+}
+
+th, td{
+    /* margin: 0%; */
+    border: black .2rem solid;
+    border-right: none;
     border-collapse: collapse;
+    padding: 0;
+    margin: 0;
+}
+
+.td-delete, .td-transfer{
+    border-left: none;
 }
 
 table{
-    min-width: 100%;
+    border-collapse: collapse;
 }
+
+.td-delete, .remove{
+    border-top-right-radius: .6rem;
+    border-bottom-right-radius: .6rem;
+    border-right: solid;
+}
+
+td.notes{
+    text-align: left;
+}
+
+button{
+    width: 5rem;
+    border-radius: .6rem;
+    margin: .1rem auto;
+    height: 2.5rem;
+}
+
+/* .name{
+    grid-column-start: 1;
+}
+
+.age{
+    grid-column-start: 2;
+}
+
+.gender{
+    grid-column-start: 3;
+}
+
+.transfer{
+    grid-column-start: 4;
+} */
 
